add logistic regression section

--- a/templates/chap3.tex
+++ b/templates/chap3.tex
@@ -537,7 +537,7 @@ Preparation of well data sets WDS, WDS4, and WDS8 first involved removing record
 \label{tab:data_set_class_count}
 \end{table}
 
-\subsubsection{Stratified Sampling}
+\subsubsection{Stratified Sampling} \label{ch3:strat_sample}
 
 Supervised machine learning models determine the attributes of a predictive model based on the input data provided during training. In approximating the target function, i.e., the response variable, the models seek to minimize an objective function as much as possible. The pitfall here lies in the representativeness of the training data set; if a model exactly matches the input data, it may not generalize well to other unseen observations. This would be a high variance model, meaning the model predictions are strongly coupled to the characteristics of the training data. Variance trades off with model bias, which includes simplifying assumptions on the form of the target function. The bias-variance trade-off is a core concept in machine learning \citep[~p. 33-36]{james_introduction_2013} and drives many of the model decisions made within this thesis.
 
