--- a/templates/main.bib
+++ b/templates/main.bib
@@ -1624,13 +1624,13 @@ Publisher: Nature Publishing Group},
 
 @misc{bp_international_2020,
 	type = {Press {Release}},
-	title = {From {International} {Oil} {Company} to {Integrated} {Energy} {Company}: bp sets out strategy for decade of delivery towards net zero ambition {\textbar} {News} and insights {\textbar} {Home}},
+	title = "From {International} {Oil} {Company} to {Integrated} {Energy} {Company}: {BP} sets out strategy for decade of delivery towards net zero ambition {\textbar} {News} and insights {\textbar} {Home}",
 	shorttitle = {From {International} {Oil} {Company} to {Integrated} {Energy} {Company}},
 	url = {https://www.bp.com/en/global/corporate/news-and-insights/press-releases/from-international-oil-company-to-integrated-energy-company-bp-sets-out-strategy-for-decade-of-delivery-towards-net-zero-ambition.html},
 	language = {en},
 	urldate = {2021-03-06},
-	journal = {bp global},
-	author = {bp},
+	journal = {BP Global},
+	author = "{BP}",
 	month = aug,
 	year = {2020},
 }
