--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,141 @@
 
+@misc{brownlee_recursive_2020,
+	title = {Recursive {Feature} {Elimination} ({RFE}) for {Feature} {Selection} in {Python}},
+	url = {https://machinelearningmastery.com/rfe-feature-selection-in-python/},
+	abstract = {Recursive Feature Elimination, or RFE for short, is a popular feature selection algorithm. RFE is popular because it is easy […]},
+	language = {en-US},
+	urldate = {2021-06-23},
+	journal = {Machine Learning Mastery},
+	author = {Brownlee, Jason},
+	month = may,
+	year = {2020},
+}
+
+@misc{scikit-learn_sklearnfeature_selectionrfe_2021,
+	title = {sklearn.feature\_selection.{RFE}},
+	url = {https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.RFE.html},
+	urldate = {2021-06-23},
+	journal = {Recursive Feature Elimination — scikit-learn 0.24.2 documentation},
+	author = {{scikit-learn}},
+	year = {2021},
+}
+
+@misc{brownlee_how_2020,
+	title = {How to {Fix} k-{Fold} {Cross}-{Validation} for {Imbalanced} {Classification}},
+	url = {https://machinelearningmastery.com/cross-validation-for-imbalanced-classification/},
+	abstract = {Model evaluation involves using the available dataset to fit a model and estimate its performance when making predictions on unseen […]},
+	language = {en-US},
+	urldate = {2021-06-23},
+	journal = {Machine Learning Mastery},
+	author = {Brownlee, Jason},
+	month = jan,
+	year = {2020},
+}
+
+@misc{brownlee_one-vs-rest_2020,
+	title = {One-vs-{Rest} and {One}-vs-{One} for {Multi}-{Class} {Classification}},
+	url = {https://machinelearningmastery.com/one-vs-rest-and-one-vs-one-for-multi-class-classification/},
+	abstract = {Not all classification predictive models support multi-class classification. Algorithms such as the Perceptron, Logistic Regression, and Support Vector Machines were […]},
+	language = {en-US},
+	urldate = {2021-06-23},
+	journal = {Machine Learning Mastery},
+	author = {Brownlee, Jason},
+	month = apr,
+	year = {2020},
+}
+
+@misc{scikit-learn_multiclass_2021,
+	title = {Multiclass and multioutput algorithms},
+	url = {https://scikit-learn.org/stable/modules/multiclass.html#multiclass-classification},
+	urldate = {2021-06-23},
+	journal = {1.12. Multiclass and multioutput algorithms — scikit-learn 0.24.2 documentation},
+	author = {{scikit-learn}},
+	year = {2021},
+}
+
+@misc{ng_regularization_2011,
+	title = {Regularization {\textbar} {Regularized} {Logistic} {Regression}},
+	shorttitle = {Lecture 7.4},
+	url = {https://www.coursera.org/learn/machine-learning},
+	author = {Ng, Andrew},
+	year = {2011},
+}
+
+@misc{ng_logistic_2011,
+	title = {Logistic {Regression} {\textbar} {Simplified} {Cost} {Function} {And} {Gradient} {Descent}},
+	shorttitle = {Lecture 6.5},
+	url = {https://www.coursera.org/learn/machine-learning},
+	author = {Ng, Andrew},
+	year = {2011},
+}
+
+@misc{scikit-learn_1111_2021,
+	title = {1.1.11. {Logistic} regression},
+	url = {https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression},
+	urldate = {2021-06-23},
+	journal = {1.1. Linear Models — scikit-learn 0.24.2 documentation},
+	author = {{scikit-learn}},
+	year = {2021},
+}
+
+@book{bertsimas_analytics_2016,
+	address = {Belmont, Massachusetts},
+	title = {The {Analytics} {Edge}},
+	isbn = {0-9899108-9-X},
+	abstract = {The Analytics Edge  provides a unified, insightful, modern and entertaining treatment of analytics. The book covers the science of using data to build models, improve decisions, and ultimately add value to institutions and individuals.  The philosophical underpinnings of the book are that real world problems are usually complex and often will defined; they do not come with labels, meaning that they are not necessarily regression problems or optimization problems. The only objective reality is data, which itself may be incomplete and of questionable quality, and the role of models is to facilitate the solution of real world problems. Problems and data play a leading role in this book, while models play an essential but supporting role. This is in contrast with the vast majority of books and classes available today, in which methods play the leading role.   Dimitris Bertsimas is the Boeing Professor of Operations Research and the co-director of the Operations Research Center at the Massachusetts Institute of Technology. He is a member of the National Academy of Engineering, recipient of numerous research awards and co-founder of six Analytics companies.  Allison K. O'Hair is a Lecturer in Operations, Information and Technology at the Stanford Graduate School of Business. She has a Ph.D. in Operations Research from MIT, and is a former Lecturer at the MIT Sloan School of Management.  William R. Pulleyblank is Professor of Operations Research at the United States Military Academy, West Point. Previously he was Vice President of Business Optimization in IBM and before that led the BlueGene supercomputing project in IBM Research. He is a member of the National Academy of Engineering and has served on a broad range of business and government advisory boards.},
+	publisher = {Dynamic Ideas LLC},
+	author = {Bertsimas, Dimitris and O'Hair, Allison and Pulleyblank, William},
+	month = jan,
+	year = {2016},
+}
+
+@misc{scikit-learn_sklearnmetricsroc_auc_score_2021,
+	title = {sklearn.metrics.roc\_auc\_score},
+	url = {https://scikit-learn.org/stable/modules/generated/sklearn.metrics.roc_auc_score.html#sklearn.metrics.roc_auc_score},
+	urldate = {2021-06-22},
+	journal = {roc\_auc\_score — scikit-learn 0.24.2 documentation},
+	author = {{scikit-learn}},
+	year = {2021},
+}
+
+@article{tharwat_classification_2020,
+	title = {Classification assessment methods},
+	issn = {2634-1964},
+	journal = {Applied Computing and Informatics},
+	author = {Tharwat, Alaa},
+	year = {2020},
+	note = {Publisher: Emerald Publishing Limited},
+}
+
+@article{fawcett_introduction_2006,
+	title = {An introduction to {ROC} analysis},
+	volume = {27},
+	issn = {0167-8655},
+	number = {8},
+	journal = {Pattern recognition letters},
+	author = {Fawcett, Tom},
+	year = {2006},
+	note = {Publisher: Elsevier},
+	pages = {861--874},
+}
+
+@article{fawcett_introduction_2006-1,
+	title = {An introduction to {ROC} analysis},
+	volume = {27},
+	issn = {01678655},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S016786550500303X},
+	doi = {10.1016/j.patrec.2005.10.010},
+	abstract = {Receiver operating characteristics (ROC) graphs are useful for organizing classiﬁers and visualizing their performance. ROC graphs are commonly used in medical decision making, and in recent years have been used increasingly in machine learning and data mining research. Although ROC graphs are apparently simple, there are some common misconceptions and pitfalls when using them in practice. The purpose of this article is to serve as an introduction to ROC graphs and as a guide for using them in research.},
+	language = {en},
+	number = {8},
+	urldate = {2021-06-22},
+	journal = {Pattern Recognition Letters},
+	author = {Fawcett, Tom},
+	month = jun,
+	year = {2006},
+	pages = {861--874},
+}
+
 @misc{scikit-learn_common_2021,
 	title = {Common pitfalls and recommended practices},
 	url = {https://scikit-learn.org/stable/common_pitfalls.html},
