--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,17 +1,23 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
 \newacronym{ann}{ANN}{Artificial Neural Network}
 \newacronym{aoi}{AOI}{Area of Interest}
+\newacronym{auc}{AUC}{Area Under the ROC Curve}
 \newacronym{bht}{BHT}{Bottom Hole Temperature}
 \newacronym{br}{BR}{Basin and Range}
 \newacronym{bnn}{BNN}{Bayesian Neural Network}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{cp}{CP}{Colorado Plateau}
+\newacronym{cv}{CV}{Cross Validation}
 \newacronym{dem}{DEM}{Digital Elevation Model}
 \newacronym{doe}{DOE}{United States Department of Energy}
+\newacronym{dt}{DT}{Decision Tree}
 \newacronym{egs}{EGS}{Enhanced Geothermal Systems}
 \newacronym{eia}{EIA}{United States Energy Information Administration}
 \newacronym{ebk}{EBK}{Empirical Bayes Kriging}
 \newacronym{ep}{E\&P}{Exploration and Production}
+\newacronym{fn}{FN}{False Negative}
+\newacronym{fp}{FP}{False Positive}
+\newacronym{fpr}{FPR}{False Positive Rate}
 \newacronym{gdh}{GDH}{Geothermal District Heating}
 \newacronym{ghg}{GHG}{Greenhouse Gas}
 \newacronym{gis}{GIS}{Geographic Information System}
@@ -21,22 +27,30 @@
 \newacronym{irena}{IRENA}{International Renewable Energy Agency}
 \newacronym{kde}{KDE}{Kernel Density Estimation}
 \newacronym{kgra}{KGRA}{Known Geothermal Resource Area}
-\newacronym{kwh}{kWh}{Kilowatt-Hour}
-\newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
+\newacronym{kwh}{kW$\cdot$h}{Kilowatt-Hour}
 \newacronym{lanl}{LANL}{Los Alamos National Laboratory}
+\newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
+\newacronym{lr}{LR}{Logistic Regression}
 \newacronym{ma}{Ma}{Million Years Ago}
 \newacronym{mdvf}{MDVF}{Mogollon-Datil Volcanic Field}
-\newacronym{mwh}{MWh}{Megawatt-Hour}
+\newacronym{mwh}{MW$\cdot$h}{Megawatt-Hour}
 \newacronym{nan}{NaN}{Not a Number}
 \newacronym{nfegs}{NF-EGS}{Near Field EGS}
-\newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
 \newacronym{ngds}{NGDS}{National Geothermal Data System}
 \newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& $k$-means Clustering}
 \newacronym{nm}{NM}{New Mexico}
 \newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
+\newacronym{ovo}{OvO}{One versus One}
+\newacronym{ovr}{OvR}{One versus Rest}
 \newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
 \newacronym{pca}{PCA}{Principle Component Analysis}
 \newacronym{pfa}{PFA}{Play Fairway Analysis}
+\newacronym{rfe}{RFE}{Recursive Feature Elimination}
 \newacronym{rgr}{RGR}{Rio Grande Rift}
+\newacronym{roc}{ROC}{Receiver Operating Characteristic}
+\newacronym{tn}{TN}{True Negative}
+\newacronym{tp}{TP}{True Positive}
+\newacronym{tpr}{TPR}{True Positive Rate}
 \newacronym{usgs}{USGS}{United States Geological Survey}
 \newacronym{voi}{VOI}{Value of Information}
+\newacronym{xgb}{XGB}{XGBoost}
