--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -78,8 +78,8 @@ Based on the aforementioned opportunity to integrate uncertainty characterizatio
 This thesis follows the flow shown in Figure \ref{fig:thesis_flow} and is structured as follows: 
 \begin{itemize}
 \item Chapter 2 provides relevant background on the origins of geothermal heat, types of geothermal systems, and a literature review on geothermal exploration and facility planning.
-\item Chapters 3-4 explain the sources of data used in the thesis, data preparation strategies, and the chosen methods for predictive analytics (Ch. 3) and cost modeling of geothermal facility project designs (Ch. 4).
-\item Chapters 5-6 describe and discuss the analytics results (Ch. 5) and cost modeling results (Ch. 6).
+\item Chapters 3--4 explain the sources of data used in the thesis, data preparation strategies, and the chosen methods for predictive analytics (Ch.\ 3) and cost modeling of geothermal facility project designs (Ch.\ 4).
+\item Chapters 5--6 describe and discuss the analytics results (Ch.\ 5) and cost modeling results (Ch.\ 6).
 \item Chapter 7 frames learnings from the previous chapters as risk mitigation actions in a comprehensive geothermal business strategy.
 \end{itemize}
 \end{minipage} \hfill
@@ -89,7 +89,7 @@ This thesis follows the flow shown in Figure \ref{fig:thesis_flow} and is struct
 \label{fig:thesis_flow}
 \end{minipage}
 \begin{itemize}
-\item Chapters 8 and 9 conclude the thesis with a summary of thesis insights (Ch. 8) and a list of future work opportunities (Ch. 9).
+\item Chapters 8 and 9 conclude the thesis with a summary of thesis insights (Ch.\ 8) and a list of future work opportunities (Ch.\ 9).
 \end{itemize}
 \end{figure}
 
