added full decision tree section

--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -13,20 +13,31 @@ The second major source of heat within the Earth is the decay of radioactive iso
 \subsubsection{Geothermal Gradient}\label{ch2:geotherm}
 Average subsurface conditions show a steady increase in temperature with depth, commonly referred to as the geothermal gradient, sustained by the flow of original accretionary heat and generated radioactive heat. On average, the gradient for continental crust is $\approx30%^\circ
 $K%C
-/km \citep[p.\ 209]{press_understanding_2004}. However, deviations from this value are common and reflect the complexity of the rock record in an area. The crust comprises a distinct set of layers, or strata, that vary in composition and rock type. Unlike the aforementioned igneous formations that can be relatively homogeneous, surface processes mix sediments from a variety of original source rocks, sometimes sorting them well and sometimes not, before they get deposited and indurated into sedimentary formations \citep[~p. 164-168]{press_understanding_2004}. Alteration from fluids, heat, and pressure can then modify the composition of these rocks, causing constituent minerals to change form and arrangement to create metamorphic rocks \citep[~p. 195-205]{press_understanding_2004}. The spatial and depth variations in these formations create subsurface compositional heterogeneity, directly reflected in rock properties. Thermal conductivity, specifically the ability to move deep-sourced heat to shallower depths, and radioactive element abundance, or the ability to generate additional heat in situ, can therefore vary in all directions in the subsurface. Thermal heterogeneity can be further compounded by anomalies created from salt movement \citep[~p. 164-168]{press_understanding_2004}, magmatic intrusions, or global tectonic processes. Geology and geologic history therefore play an important role in defining the geothermal gradient of an area.
+/km \citep[p.\ 209]{press_understanding_2004}. However, deviations from this value are common and reflect the complexity of the rock record in an area. The crust comprises %a
+distinct %set of
+layers, or strata, that vary in composition and rock type. Unlike the aforementioned igneous formations that can be relatively homogeneous, surface processes mix sediments from a variety of original source rocks, sometimes sorting them well and sometimes not, before they get deposited and indurated into sedimentary formations \citep[p.\ 164--168]{press_understanding_2004}. Alteration from fluids, heat, and pressure can then modify the composition of these rocks, causing constituent minerals to change form and arrangement to create metamorphic rocks \citep[p.\ 195--205]{press_understanding_2004}. The spatial and depth variations in these formations create subsurface compositional heterogeneity, directly reflected in rock properties. Thermal conductivity, specifically the ability to move deep-sourced heat to shallower depths, and radioactive element abundance, or the ability to generate additional heat in situ, can therefore vary in all directions in the subsurface. Thermal heterogeneity can be further compounded by anomalies created from salt movement \citep[p.\ 164--168]{press_understanding_2004}, magmatic intrusions, or global tectonic processes. Geology and geologic history therefore play an important role in defining the geothermal gradient of an area.
 
 \subsubsection{Heat Flow}\label{ch2:heatflow}
-Fundamentally, heat moves in the direction from hot to cold (Second Law of Thermodynamics) at a rate that linearly scales with the thermal gradient. Simple, one-dimensional thermal conduction can be characterized by the relationship \citep[~p. 270]{fowler_solid_2005}:
+Fundamentally, heat moves in the direction from hot to cold (Second Law of Thermodynamics) at a rate that linearly scales with the thermal gradient. Simple, one-dimensional thermal conduction can be characterized by the relationship \citep[Fourier's Law,][p.\ 270]{fowler_solid_2005}:
 \begin{equation}\label{eq:conduction}
-q = -k \frac{\nabla T}{x}
+{\bf q} = -k %\frac{
+\nabla T%}{x}
+,
 \end{equation}
-where q is heat flux, or heat flow per unit time per unit area, with S.I. units of Wm$^{-2}$. Heat flux depends on the gradient of temperature (T), the distance over which conduction takes place (x), and the thermal conductivity (k), that is, the ability of material to conduct heat. Different rock types have different values of k, e.g., sandstone varies from 1.60-2.10 W/m$^\circ$C while granite tends to be higher with values ranging from 1.73-3.98 W/m$^\circ$C \citep[~p. 30]{dipippo_geothermal_2012}. Feldspars and quartz exhibit significant (up to 3x) differences in k values. As the most abundant minerals in crustal rocks, their relative fractions will strongly influence the thermal conductivity of a formation \citep[~p. 22]{glassley_geothermal_2015}. Regardless, typical crustal minerals tend to be relatively poor thermal conductors compared to metals like aluminum (210 W/m$^\circ$C) and iron (73 W/m$^\circ$C), making conduction a slow method of crustal heat transmission \citep[~p. 23]{dipippo_geothermal_2012}.
+where ${\bf q}$ is heat flux, or heat flow per unit time per unit area, with S.I.\ units of W$\cdot$m$^{-2}$. Heat flux depends on the gradient of temperature ($T$), %the distance over which conduction takes place (x),
+and the thermal conductivity ($k$), that is, the ability of material to conduct heat. Different rock types have different values of $k$ e.g., sandstone varies from 1.60--2.10 W/m$\cdot$K while granite tends to be higher with values ranging from 1.73--3.98 W/m$\cdot$K \citep[p.\ 30]{dipippo_geothermal_2012}. Feldspars and quartz exhibit significant (up to 3$\times$) differences in $k$ values. As the most abundant minerals in crustal rocks, their relative fractions will strongly influence the thermal conductivity of a formation \citep[p.\ 22]{glassley_geothermal_2015}. Regardless, typical crustal minerals tend to be relatively poor thermal conductors compared to metals like aluminum (210 W/m$\cdot$K) and iron (73 W/m$\cdot$K), making conduction a slow method of crustal heat transmission \citep[p.\ 23]{dipippo_geothermal_2012}.
 
-Conduction dominates on local scales in the crust, while convection is the primary means of heat transfer on global, tectonic scales. Even in its two-dimensional form with no internal heat generation, the equation governing convection is much more complex than for conduction \citep[~p. 355]{lowrie_fundamentals_2007}:
+Conduction dominates on local scales in the crust, while convection is the primary means of heat transfer on global, tectonic scales. Even in its two-dimensional form with no internal heat generation, the equation governing convection is much more complex than for conduction \citep[p.\ 355]{lowrie_fundamentals_2007}:
 \begin{equation}\label{eq:convection}
-\frac{\partial T}{\partial t} = \left (\frac{k}{\rho * c_P}\right)\left (\frac{\partial ^2T}{\partial x^2}+\frac{\partial ^2T}{\partial z^2}\right)-u_x\frac{\partial T}{\partial x}-u_z\frac{\partial T}{\partial z}
+\frac{\partial T}{\partial t} = %\left (
+\frac{1}{\rho c_P}%\right)
+\nabla\bullet\left(%\frac{\partial ^2
+ k\nabla T%}{\partial x^2}+\frac{\partial ^2T}{\partial z^2}
+\right)-{\bf u}\bullet\nabla%_x\frac{\partial 
+T%}{\partial x}-u_z\frac{\partial T}{\partial z}
+,
 \end{equation}
-where \textbf{u} = ($u_x$, $u_z$) is the velocity of the fluid, $\rho$ is the material density, and $c_P$ is the specific heat, which defines the amount of heat necessary to raise 1 kg of that material by $1^\circ$C Convention combines heat transfer from conduction with mass movement. Since the minerals are relatively poor conductors of heat, the combined effects of lower viscosity and thermal expansion --– as seen near the core-mantle boundary –-- and gravitational forces that create buoyancy effects, all create the right conditions for convective flow, e.g., within the mantle \citep[~p. 25]{glassley_geothermal_2015}. Mantle convection is responsible for the high heat flow values observed at crustal plate boundaries like mid-ocean ridges, as well as intraplate diapiric hot spots underlying Hawaii, Yellowstone, and a number of other locations around the world. Smaller-scale convection also takes place at subduction zones where the material from the down-diving plate melts at lower temperatures with the presence of water, migrates upwards, and forms volcanic arcs on the surface as observed in Japan, Indonesia, and the Pacific Northwest of the U.S. \citep[~p. 31-33]{press_understanding_2004} --– all locations with geothermal potential.
+where \textbf{u} = ($u_x$, $u_z$) is the velocity of the fluid, $\rho$ is the material density, and $c_P$ is the specific heat, which defines the amount of heat necessary to raise 1 kg of that material by $1$ K. Convection combines heat transfer from conduction with mass movement. Since the minerals are relatively poor conductors of heat, the combined effects of lower viscosity and thermal expansion --– as seen near the core-mantle boundary –-- and gravitational forces that create buoyancy effects, all create the right conditions for convective flow, e.g., within the mantle \citep[~p. 25]{glassley_geothermal_2015}. Mantle convection is responsible for the high heat flow values observed at crustal plate boundaries like mid-ocean ridges, as well as intraplate diapiric hot spots underlying Hawaii, Yellowstone, and a number of other locations around the world. Smaller-scale convection also takes place at subduction zones where the material from the down-diving plate melts at lower temperatures with the presence of water, migrates upwards, and forms volcanic arcs on the surface as observed in Japan, Indonesia, and the Pacific Northwest of the U.S. \citep[~p. 31-33]{press_understanding_2004} --– all locations with geothermal potential.
 
 Heat flow measurements capture the flux of heat through the Earth’s surface as a result of these and other complex processes taking place in the subsurface. In this respect, it serves as a simpler and more accessible metric for local or regional heat potential than the more sparsely-measured and less well-constrained geothermal gradient. Today, high-quality heat flow measurements can be obtained in marine conditions, on continental margins, on mid-ocean ridges, and from the multitude wells drilled by the oil \& gas industry, supporting the creation of large heat flow data sets like the New Global Heat Flow Database \citep{lucazeau_analysis_2019}. As Figure \ref{fig:heatflow} shows, data from these collections can be gridded to create spectacular maps of heat flow variations around the world. These maps offer a good starting point for quickly targeting where the greatest geothermal potential exists at the regional scale, which can then be further refined through additional methods (see Section \ref{ch2:geoexp}).
 \begin{figure}[h!]
